--- a/Mod1/Mod1/Develop/index.html
+++ b/Mod1/Mod1/Develop/index.html
@@ -16,6 +16,7 @@
             </a>
         </h1>
         <nav>
+            <div>
             <!--Unordered List Elemeents - Links-->
             <ul>
                 <!--List Item Elements-->
@@ -31,6 +32,7 @@
                 </li>
             </ul>
         </nav>
+    </div>
     </header>
 
 
