--- a/Mod1/Mod1/Develop/index.html
+++ b/Mod1/Mod1/Develop/index.html
@@ -38,7 +38,7 @@
 
     <!--Reformatting and Integrating Divs in Services Offered-->
         <article class="services">
-            <img src="./assets/images/search-engine-optimization.jpg" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <div class="text-float-right">
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -50,7 +50,7 @@
         </article>
 
         <article class="services">
-            <img src="./assets/images/online-reputation-management.jpg" />
+              <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <div class="text-float-left">
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -63,7 +63,6 @@
         </article>
 
         <article class="services">
-            <img src="./assets/images/social-media-marketing.jpg" />
             <div class="text-float-right">
                 <h2>Social Media Marketing</h2>
                 <p>
@@ -73,6 +72,7 @@
                     markets and increase your lead generation.
                 </p>
             </div>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
         </article>
     </section>
 
