--- a/Mod1/Mod1/Develop/index.html
+++ b/Mod1/Mod1/Develop/index.html
@@ -37,47 +37,48 @@
     <div class="hero"></div>
 
     <!--Reformatting and Integrating Divs in Services Offered-->
-        <article class="services">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <div class="text-float-right">
-                <h2>Search Engine Optimization</h2>
-                <p>
-                    The dominance of mobile internet use means that users are searching for the right business as
-                    they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to
-                    increase your visibility and find the right customers for your business.
-                </p>
-            </div>
-        </article>
+    <article class="services">
+        <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <div class="float-right">
+            <h2>Search Engine Optimization</h2>
+            <p>
+                The dominance of mobile internet use means that users are searching for the right business as
+                they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to
+                increase your visibility and find the right customers for your business.
+            </p>
+        </div>
+    </article>
 
-        <article class="services">
-              <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <div class="text-float-left">
-                <h2>Online Reputation Management</h2>
-                <p>
-                    The web is full of opinions, and some of these can be negative. Social media allows anyone with
-                    an internet connection to say whatever they want about your business. Online Reputation
-                    Management gives you the control over what potential customers see when they search for your
-                    business.
-                </p>
-            </div>
-        </article>
+    <article class="services">
+        <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <div class="float-left">
+            <h2>Online Reputation Management</h2>
+            <p>
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with
+                an internet connection to say whatever they want about your business. Online Reputation
+                Management gives you the control over what potential customers see when they search for your
+                business.
+            </p>
+        </div>
+    </article>
 
-        <article class="services">
-            <div class="text-float-right">
-                <h2>Social Media Marketing</h2>
-                <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing
-                    helps you determine which platforms are suited to your brand, using analytics to find the
-                    right
-                    markets and increase your lead generation.
-                </p>
-            </div>
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-        </article>
+    <article class="services">
+        <div class="float-right">
+            <h2>Social Media Marketing</h2>
+            <p>
+                Social media continues to have a sizable influence on buying habits. Social media marketing
+                helps you determine which platforms are suited to your brand, using analytics to find the
+                right
+                markets and increase your lead generation.
+            </p>
+        </div>
+        <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+    </article>
     </section>
 
-    <div class="benefits">
-        <div class="benefit-lead">
+    <!--Side Benefits Section-->
+    <article class="benefits">
+        <div class="benefit-title">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -85,7 +86,10 @@
                 directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+    </article>
+
+    <article class="benefits">
+        <div class="benefit-title">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -93,7 +97,10 @@
                 visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+    </article>
+
+    <article class="benefits">
+        <div class="benefit-title">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -101,7 +108,8 @@
                 longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </article>
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
